--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -6,6 +6,7 @@ name: Unit Tests
 on:
   #Triggers the workflow on push or pull request events but only for the "main" branch
   push:
+    branches: [ "macos" ]
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
