--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -41,13 +41,17 @@ jobs:
         run: npm ci
       - name: tests
         run: npm test
+      - uses: actions/upload-artifact@v2  # upload test results
+        with:
+          name: test-results
+          path: jest-junit.xml
 
       - name: Test Report
         uses: dorny/test-reporter@v1
         if: success() || failure()    # run this step even if previous step failed
         with:
           name: JEST Tests            # Name of the check run which will be created
-          path: reports/jest-*.xml    # Path to test results
+          path: jest-*.xml    # Path to test results
           reporter: jest-junit        # Format of test results
           
           
