--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "jest": "^29.0.3"
+    "jest": "^29.0.3",
+    "jest-junit-reporter": "^1.1.0"
   }
 }
