changed to 1 version

--- a/package.json
+++ b/package.json
@@ -15,11 +15,6 @@
   },
   "jest-junit": {
     "outputDirectory": "reports",
-    "outputName": "jest-junit.xml",
-    // "ancestorSeparator": " › ",
-    // "uniqueOutputName": "false",
-    // "suiteNameTemplate": "{filepath}",
-    // "classNameTemplate": "{classname}",
-    // "titleTemplate": "{title}"
+    "outputName": "jest-junit.xml"
   }
 }
