--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "jest": "^29.5.0",
     "jest-junit-reporter": "^1.1.0"
   },
+  "jest": {
+    "testResultsProcessor": "./node_modules/jest-junit-reporter"
+  },
   "jest-junit": {
     "outputDirectory": "reports",
     "outputName": "jest-junit.xml"
