--- a/package.json
+++ b/package.json
@@ -18,6 +18,11 @@
   },
   "jest-junit": {
     "outputDirectory": "reports",
-    "outputName": "jest-junit.xml"
+    "outputName": "jest-junit.xml",
+    "ancestorSeparator": " › ",
+    "uniqueOutputName": "false",
+    "suiteNameTemplate": "{filepath}",
+    "classNameTemplate": "{classname}",
+    "titleTemplate": "{title}"
   }
 }
