--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -49,6 +49,8 @@ jobs:
           name: JEST Tests            # Name of the check run which will be created
           path: jest-junit.xml   # Path to test results
           reporter: jest-junit        # Format of test results
-          
+          # Personal access token used to interact with Github API
+          # Default: ${{ github.token }}
+          token: '${{ secrets.TOKEN }}'
           
           
