--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -41,10 +41,19 @@ jobs:
         run: npm ci
       - name: tests
         run: npm test
+      - name: coverage
+        run: npm test -- --coverage
+      
+      - uses: actions/upload-artifact@v2  # upload test results
+        if: success() || failure()        # run this step even if previous step failed
+        with:
+          name: coverage-report
+          path: coverage/Icov-report/index.html 
 
       - name: Test Report
         uses: dorny/test-reporter@v1.6.0
-        if: success() || failure()    # run this step even if previous step failed
+        if: github.repository == 'octo-org/octo-repo-prod'
+        #if: success() || failure()    # run this step even if previous step failed
         with:
           name: JEST Tests            # Name of the check run which will be created
           path: jest-junit.xml   # Path to test results
