--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -52,8 +52,8 @@ jobs:
 
       - name: Test Report
         uses: dorny/test-reporter@v1.6.0
-        if: github.repository == 'octo-org/octo-repo-prod'
-        #if: success() || failure()    # run this step even if previous step failed
+        #if: github.repository == 'octo-org/octo-repo-prod'
+        if: success() || failure()    # run this step even if previous step failed
         with:
           name: JEST Tests            # Name of the check run which will be created
           path: jest-junit.xml   # Path to test results
